src/tests/snapshots/cargo_vet__tests__import__equal_length_preferred_audits.snap
---
source: src/tests/import.rs
expression: output
---
+
+[[audits.peer-company.audits.third-party2]]
+criteria = "safe-to-deploy"
+version = "2.0.0"
+
+[[audits.peer-company.audits.third-party2]]
+criteria = "safe-to-deploy"
+delta = "2.0.0 -> 10.0.0"

