src/tests/snapshots/cargo_vet__tests__import__existing_peer_add_violation.snap
---
source: src/tests/import.rs
expression: output
---
 
 [[audits.peer-company.audits.third-party2]]
 criteria = "safe-to-deploy"
 delta = "100.0.0 -> 200.0.0"
+
+[[audits.peer-company.audits.third-party2]]
+criteria = "safe-to-deploy"
+violation = "99.*"

