src/tests/snapshots/cargo_vet__tests__import__existing_peer_import_custom_criteria.snap
---
source: src/tests/import.rs
expression: output
---
 
+[audits.peer-company.criteria.fuzzed]
+description = "fuzzed"
+
 [[audits.peer-company.audits.third-party2]]
 criteria = "safe-to-deploy"
 version = "10.0.0"

