src/tests/snapshots/cargo_vet__tests__import__existing_peer_remove_unused.snap
---
source: src/tests/import.rs
expression: output
---
 
 [[audits.peer-company.audits.third-party2]]
 criteria = "safe-to-deploy"
 version = "5.0.0"
 
 [[audits.peer-company.audits.third-party2]]
-criteria = "safe-to-run"
-version = "10.0.0"
-
-[[audits.peer-company.audits.third-party2]]
 criteria = "safe-to-deploy"
 delta = "5.0.0 -> 10.0.0"
-
-[[audits.peer-company.audits.third-party2]]
-criteria = "safe-to-deploy"
-delta = "100.0.0 -> 200.0.0"
-
-[[audits.peer-company.audits.unused-package]]
-criteria = "safe-to-deploy"
-version = "10.0.0"

