src/tests/snapshots/cargo_vet__tests__import__existing_peer_revoked_audit_noprune.snap
---
source: src/tests/import.rs
expression: output
---
 
-[[audits.peer-company.audits.third-party2]]
-criteria = "safe-to-deploy"
-version = "10.0.0"
+[audits.peer-company.audits]

